--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url:jdbc:mysql://localhost:3306/home_care
-spring.datasource.username:root
-spring.datasource.password:root
+spring.datasource.url:jdbc:mysql://us-cdbr-iron-east-04.cleardb.net/heroku_212c06f17e4dd75
+spring.datasource.username:bc34415e7067e8
+spring.datasource.password:60f3970c
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.max-active=5
+spring.datasource.max-idle=5
+spring.datasource.min-idle=5
 
 spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql: true
