--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     }
 	compile("mysql:mysql-connector-java:5.1.13")
 	compile("org.apache.commons:commons-lang3:3.4")
-    compile("com.h2database:h2")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
     testCompile("junit:junit")
 }
 
