--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
 
 spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql: true
+spring.jpa.show-sql: false
